--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,48 @@
+# OS generated files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Node modules
 node_modules/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# IDE files
+.idea/
+.vscode/
+*.swp
+*.swo
+
 coverage/
 .env
 npm-debug.log
 yarn-debug.log
 yarn-error.log
-.vscode/
-.idea/
 *.log
 auctiontest/
 bondingcurvetool/
